@@ -5,12 +5,10 @@
  * which accompanies this distribution, and is available at
  * http://www.gnu.org/licenses/gpl.html
  ******************************************************************************/
-package at.bitfire.davdroid.webdav.test;
+package at.bitfire.davdroid.webdav;
 
-import java.io.IOException;
 import java.io.InputStream;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.Arrays;
 import java.util.List;
 
@@ -22,43 +20,41 @@ import org.apache.commons.io.IOUtils;
 
 import android.content.res.AssetManager;
 import android.test.InstrumentationTestCase;
-import at.bitfire.davdroid.webdav.DavException;
-import at.bitfire.davdroid.webdav.DavHttpClient;
-import at.bitfire.davdroid.webdav.DavMultiget;
-import at.bitfire.davdroid.webdav.HttpException;
-import at.bitfire.davdroid.webdav.HttpPropfind;
-import at.bitfire.davdroid.webdav.NotFoundException;
-import at.bitfire.davdroid.webdav.PreconditionFailedException;
-import at.bitfire.davdroid.webdav.WebDavResource;
+import at.bitfire.davdroid.test.Constants;
+import at.bitfire.davdroid.webdav.HttpPropfind.Mode;
 import at.bitfire.davdroid.webdav.WebDavResource.PutMode;
 import ch.boye.httpclientandroidlib.impl.client.CloseableHttpClient;
 
 // tests require running robohydra!
 
 public class WebDavResourceTest extends InstrumentationTestCase {
-	static final String ROBOHYDRA_BASE = "http://10.0.0.11:3000/";
 	static byte[] SAMPLE_CONTENT = new byte[] { 1, 2, 3, 4, 5 };
+	
+	final static String PATH_SIMPLE_FILE = "collection/new.file";
 	
 	AssetManager assetMgr;
 	CloseableHttpClient httpClient;
 	
+	WebDavResource baseDAV;
 	WebDavResource simpleFile,
 		davCollection, davNonExistingFile, davExistingFile,
 		davInvalid;
 
 	@Override
 	protected void setUp() throws Exception {
-		httpClient = DavHttpClient.create(true, true); 
+		httpClient = DavHttpClient.create(true, true);
 				
 		assetMgr = getInstrumentation().getContext().getResources().getAssets();
 		
-		simpleFile = new WebDavResource(httpClient, new URI(ROBOHYDRA_BASE + "assets/test.random"), false);
+		baseDAV = new WebDavResource(httpClient, new URL(Constants.roboHydra, "/dav/"));
 		
-		davCollection = new WebDavResource(httpClient, new URI(ROBOHYDRA_BASE + "dav"), true);
+		simpleFile = new WebDavResource(httpClient, new URL(Constants.ROBOHYDRA_BASE + "assets/test.random"));
+		
+		davCollection = new WebDavResource(httpClient, new URL(Constants.ROBOHYDRA_BASE + "dav/"));
 		davNonExistingFile = new WebDavResource(davCollection, "collection/new.file");
 		davExistingFile = new WebDavResource(davCollection, "collection/existing.file");
 		
-		davInvalid = new WebDavResource(httpClient, new URI(ROBOHYDRA_BASE + "dav-invalid"), true);
+		davInvalid = new WebDavResource(httpClient, new URL(Constants.ROBOHYDRA_BASE + "dav-invalid/"));
 	}
 	
 	@Override
@@ -67,69 +63,46 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 	}
 
 
-	/* test resource name handling */
-
-	public void testGetName() {
-		// collection names should have a trailing slash
-		assertEquals("dav", davCollection.getName());
-		// but non-collection names shouldn't
-		assertEquals("test.random", simpleFile.getName());
-	}
-	
-	public void testTrailingSlash() throws URISyntaxException {
-		// collections should have a trailing slash
-		assertEquals("/dav/", davCollection.getLocation().getPath());
-		// but non-collection members shouldn't
-		assertEquals("/assets/test.random", simpleFile.getLocation().getPath());
-	}
-	
-	
 	/* test feature detection */
 	
-	public void testOptions() throws URISyntaxException, IOException, HttpException {
-		String[]	davMethods = new String[] { "PROPFIND", "GET", "PUT", "DELETE" },
+	public void testOptions() throws Exception {
+		String[]	davMethods = new String[] { "PROPFIND", "GET", "PUT", "DELETE", "REPORT" },
 					davCapabilities = new String[] { "addressbook", "calendar-access" };
 		
-		// server without DAV
-		simpleFile.options();
-		for (String method : davMethods)
-			assertFalse(simpleFile.supportsMethod(method));
-		for (String capability : davCapabilities)
-			assertFalse(simpleFile.supportsDAV(capability));
-		
-		// server with DAV
-		davCollection.options();
+		WebDavResource capable = new WebDavResource(baseDAV);
+		capable.options();
 		for (String davMethod : davMethods)
-			assert(davCollection.supportsMethod(davMethod));
+			assert(capable.supportsMethod(davMethod));
 		for (String capability : davCapabilities)
-			assert(davCollection.supportsDAV(capability));
+			assert(capable.supportsDAV(capability));
 	}
 
-	public void testPropfindCurrentUserPrincipal() throws IOException, HttpException, DavException {
+	public void testPropfindCurrentUserPrincipal() throws Exception {
 		davCollection.propfind(HttpPropfind.Mode.CURRENT_USER_PRINCIPAL);
 		assertEquals("/dav/principals/users/test", davCollection.getCurrentUserPrincipal());
 		
 		try {
 			simpleFile.propfind(HttpPropfind.Mode.CURRENT_USER_PRINCIPAL);
 			fail();
+			
 		} catch(DavException ex) {
 		}
 		assertNull(simpleFile.getCurrentUserPrincipal());
 	}
 		
-	public void testPropfindHomeSets() throws IOException, HttpException, DavException {
+	public void testPropfindHomeSets() throws Exception {
 		WebDavResource dav = new WebDavResource(davCollection, "principals/users/test");
 		dav.propfind(HttpPropfind.Mode.HOME_SETS);
-		assertEquals("/dav/addressbooks/test", dav.getAddressbookHomeSet());
+		assertEquals("/dav/addressbooks/test/", dav.getAddressbookHomeSet());
 		assertEquals("/dav/calendars/test/", dav.getCalendarHomeSet());
 	}
 	
-	public void testPropfindAddressBooks() throws IOException, HttpException, DavException {
-		WebDavResource dav = new WebDavResource(davCollection, "addressbooks/test", true);
-		dav.propfind(HttpPropfind.Mode.MEMBERS_COLLECTIONS);
+	public void testPropfindAddressBooks() throws Exception {
+		WebDavResource dav = new WebDavResource(davCollection, "addressbooks/test");
+		dav.propfind(HttpPropfind.Mode.CARDDAV_COLLECTIONS);
 		assertEquals(2, dav.getMembers().size());
 		for (WebDavResource member : dav.getMembers()) {
-			if (member.getName().equals("default.vcf"))
+			if (member.getName().equals("default-v4.vcf"))
 				assertTrue(member.isAddressBook());
 			else
 				assertFalse(member.isAddressBook());
@@ -137,9 +110,9 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 		}
 	}
 	
-	public void testPropfindCalendars() throws IOException, HttpException, DavException {
-		WebDavResource dav = new WebDavResource(davCollection, "calendars/test", true);
-		dav.propfind(HttpPropfind.Mode.MEMBERS_COLLECTIONS);
+	public void testPropfindCalendars() throws Exception {
+		WebDavResource dav = new WebDavResource(davCollection, "calendars/test");
+		dav.propfind(Mode.CALDAV_COLLECTIONS);
 		assertEquals(3, dav.getMembers().size());
 		assertEquals("0xFF00FF", dav.getMembers().get(2).getColor());
 		for (WebDavResource member : dav.getMembers()) {
@@ -151,27 +124,46 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 		}
 	}
 	
+	public void testPropfindTrailingSlashes() throws Exception {
+		final String principalOK = "/principals/ok";
+		
+		String requestPaths[] = {
+			"/dav/collection-response-with-trailing-slash",
+			"/dav/collection-response-with-trailing-slash/",
+			"/dav/collection-response-without-trailing-slash",
+			"/dav/collection-response-without-trailing-slash/"
+		};
+		
+		for (String path : requestPaths) {
+			WebDavResource davSlash = new WebDavResource(davCollection, path);
+			davSlash.propfind(Mode.CARDDAV_COLLECTIONS);
+			assertEquals(principalOK, davSlash.getCurrentUserPrincipal());
+		}
+	}
+	
 	
 	/* test normal HTTP/WebDAV */
 	
-	public void testFollowGetRedirections() throws URISyntaxException, IOException, DavException, HttpException {
-		WebDavResource redirection = new WebDavResource(httpClient, new URI(ROBOHYDRA_BASE + "redirect"), false);
-		redirection.get();
+	public void testPropfindRedirection() throws Exception {
+		// PROPFIND redirection
+		WebDavResource redirected = new WebDavResource(baseDAV, "/redirect/301?to=/dav/");
+		redirected.propfind(Mode.CURRENT_USER_PRINCIPAL);
+		assertEquals("/dav/", redirected.getLocation().getPath());
 	}
 	
-	public void testGet() throws URISyntaxException, IOException, HttpException, DavException {
-		simpleFile.get();
+	public void testGet() throws Exception {
+		simpleFile.get("*/*");
 		@Cleanup InputStream is = assetMgr.open("test.random", AssetManager.ACCESS_STREAMING);
 		byte[] expected = IOUtils.toByteArray(is);
 		assertTrue(Arrays.equals(expected, simpleFile.getContent()));
 	}
 	
-	public void testGetHttpsWithSni() throws URISyntaxException, HttpException, IOException, DavException {
-		WebDavResource file = new WebDavResource(httpClient, new URI("https://sni.velox.ch"), false);
+	public void testGetHttpsWithSni() throws Exception {
+		WebDavResource file = new WebDavResource(httpClient, new URL("https://sni.velox.ch"));
 		
 		boolean	sniWorking = false;
 		try {
-			file.get();
+			file.get("*/*");
 			sniWorking = true; 
 		} catch (SSLPeerUnverifiedException e) {
 		}
@@ -179,8 +171,8 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 		assertTrue(sniWorking);
 	}
 	
-	public void testMultiGet() throws DavException, IOException, HttpException {
-		WebDavResource davAddressBook = new WebDavResource(davCollection, "addressbooks/default.vcf", true);
+	public void testMultiGet() throws Exception {
+		WebDavResource davAddressBook = new WebDavResource(davCollection, "addressbooks/default.vcf");
 		davAddressBook.multiGet(DavMultiget.Type.ADDRESS_BOOK, new String[] { "1.vcf", "2.vcf" });
 		assertEquals(2, davAddressBook.getMembers().size());
 		for (WebDavResource member : davAddressBook.getMembers()) {
@@ -188,7 +180,7 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 		}
 	}
 	
-	public void testPutAddDontOverwrite() throws IOException, HttpException {
+	public void testPutAddDontOverwrite() throws Exception {
 		// should succeed on a non-existing file
 		assertEquals("has-just-been-created", davNonExistingFile.put(SAMPLE_CONTENT, PutMode.ADD_DONT_OVERWRITE));
 		
@@ -200,7 +192,7 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 		}
 	}
 	
-	public void testPutUpdateDontOverwrite() throws IOException, HttpException {
+	public void testPutUpdateDontOverwrite() throws Exception  {
 		// should succeed on an existing file
 		assertEquals("has-just-been-updated", davExistingFile.put(SAMPLE_CONTENT, PutMode.UPDATE_DONT_OVERWRITE));
 		
@@ -212,7 +204,7 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 		}
 	}
 	
-	public void testDelete() throws IOException, HttpException {
+	public void testDelete() throws Exception {
 		// should succeed on an existing file
 		davExistingFile.delete();
 		
@@ -230,13 +222,13 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 	
 	/* special test */
 	
-	public void testInvalidURLs() throws IOException, HttpException, DavException {
+	public void testInvalidURLs() throws Exception {
 		WebDavResource dav = new WebDavResource(davInvalid, "addressbooks/user%40domain/");
-		dav.propfind(HttpPropfind.Mode.MEMBERS_COLLECTIONS);
+		dav.propfind(HttpPropfind.Mode.CARDDAV_COLLECTIONS);
 		List<WebDavResource> members = dav.getMembers();
 		assertEquals(2, members.size());
-		assertEquals(ROBOHYDRA_BASE + "dav/addressbooks/user%40domain/My%20Contacts%3a1.vcf/", members.get(0).getLocation().toString());
-		assertEquals("HTTPS://example.com/user%40domain/absolute-url.vcf", members.get(1).getLocation().toString());
+		assertEquals(Constants.ROBOHYDRA_BASE + "dav/addressbooks/user%40domain/My%20Contacts%3a1.vcf/", members.get(0).getLocation().toString());
+		assertEquals("https://example.com/user%40domain/absolute-url.vcf/", members.get(1).getLocation().toString());
 	}
 	
 }
